--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Sonia Forestieri - Centro Estetico a Palermo. Oltre 20 anni di esperienza nella cura della bellezza e del benessere." />
-    <title>Sonia Forestieri - Estetica</title>
+    <title>Aesthetic Center Landing Page</title>
   </head>
   <body>
     <div id="root"></div>
