Aggiornata seo e meta TAGS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
     <meta name="description" content="Centro estetico a Palermo con oltre 20 anni di esperienza. Trattamenti viso, corpo, epilazione, manicure e pedicure. Via Titina De Filippo 36, Palermo." />
     <meta name="keywords" content="centro estetico Palermo, trattamenti estetici Palermo, Sonia Forestieri estetista, epilazione Palermo, manicure Palermo, trattamenti viso Palermo, trattamenti corpo Palermo, pedicure Palermo, massaggi Palermo, depilazione Palermo" />
     <meta name="author" content="Sonia Forestieri" />
-    
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://soniaforestieri.it/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://soniaforestieri.it/" />
+    <meta property="og:title" content="Sonia Forestieri - Centro Estetico Palermo" />
+    <meta property="og:description" content="Trattamenti estetici di qualità nel cuore di Palermo. Prenota il tuo appuntamento per viso, corpo e benessere." />
+    <meta property="og:image" content="https://soniaforestieri.it/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://soniaforestieri.it/" />
+    <meta property="twitter:title" content="Sonia Forestieri - Centro Estetico Palermo" />
+    <meta property="twitter:description" content="Trattamenti estetici di qualità nel cuore di Palermo. Prenota il tuo appuntamento per viso, corpo e benessere." />
+    <meta property="twitter:image" content="https://soniaforestieri.it/og-image.jpg" />
+
     <!-- Geo Tags -->
     <meta name="geo.region" content="IT-PA" />
     <meta name="geo.placename" content="Palermo" />
