--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     <meta name="keywords" content="centro estetico Palermo, trattamenti estetici Palermo, Sonia Forestieri estetista, epilazione Palermo, manicure Palermo, trattamenti viso Palermo, trattamenti corpo Palermo, pedicure Palermo, massaggi Palermo, depilazione Palermo" />
     <meta name="author" content="Sonia Forestieri" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://soniaforestieri.it/" />
+    <link rel="canonical" href="https://www.soniaforestieri.it/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://soniaforestieri.it/" />
+    <meta property="og:url" content="https://www.soniaforestieri.it/" />
     <meta property="og:title" content="Sonia Forestieri - Centro Estetico Palermo" />
     <meta property="og:description" content="Trattamenti estetici di qualità nel cuore di Palermo. Prenota il tuo appuntamento per viso, corpo e benessere." />
-    <meta property="og:image" content="https://soniaforestieri.it/og-image.jpg" />
+    <meta property="og:image" content="https://www.soniaforestieri.it/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://soniaforestieri.it/" />
+    <meta property="twitter:url" content="https://www.soniaforestieri.it/" />
     <meta property="twitter:title" content="Sonia Forestieri - Centro Estetico Palermo" />
     <meta property="twitter:description" content="Trattamenti estetici di qualità nel cuore di Palermo. Prenota il tuo appuntamento per viso, corpo e benessere." />
-    <meta property="twitter:image" content="https://soniaforestieri.it/og-image.jpg" />
+    <meta property="twitter:image" content="https://www.soniaforestieri.it/og-image.jpg" />
 
     <!-- Geo Tags -->
     <meta name="geo.region" content="IT-PA" />
@@ -59,7 +59,7 @@
       "@context": "https://schema.org",
       "@type": "BeautySalon",
       "name": "Sonia Forestieri - Estetica",
-      "image": "https://soniaforestieri.it/logo.jpg",
+      "image": "https://www.soniaforestieri.it/logo.jpg",
       "description": "Centro estetico a Palermo specializzato in trattamenti viso, corpo, epilazione, manicure e pedicure con oltre 20 anni di esperienza.",
       "address": {
         "@type": "PostalAddress",
@@ -73,7 +73,7 @@
         "latitude": "38.1157",
         "longitude": "13.3615"
       },
-      "url": "https://soniaforestieri.it",
+      "url": "https://www.soniaforestieri.it",
       "telephone": "+393922281816",
       "email": "soniaforestieri@hotmail.it",
       "openingHoursSpecification": [
